# suzume-feedmill

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu  README.ja.md  README.md  suzume_feedmill.pc.in
.github/workflows/: ci.yml  docker-release.yml  publish.yml
cmake/: suzume_feedmill-config.cmake.in
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  normalize-sampling-example.cpp  progress-with-eta-example.cpp  simple-word-extraction.cpp  stats-json-example.cpp  wasm-example.html  wasm-example.js  wasm-readme.md  word-extraction-advanced-example.cpp
examples/en/: normalize-basic-example.cpp  normalize-sampling-example.cpp  stats-simple-example.cpp  streaming-io-example.cpp
examples/en/output/: advanced-ngrams.tsv  advanced-sample.tsv  advanced-words.tsv  simple-text.txt
examples/ja/: normalize-basic-example.cpp  normalize-sampling-example.cpp  progress-with-eta-example.cpp  stats-json-example.cpp  stats-simple-example.cpp  streaming-io-example.cpp  wasm-example.html  wasm-example.js  wasm-readme.md  word-extraction-advanced-example.cpp
examples/ja/output/: advanced-normalized.tsv  advanced-words.tsv
examples/output/: simple-pmi.tsv
include/: suzume_feedmill.h
scripts/: build-wasm.sh  check-coverage-tools.js  gcov-summary.js  incremental-build.js  install-build-tools.js  install.js  postbuild-copy.cjs  run-cpp-coverage-html.js  run-cpp-coverage-summary.js  run-cpp-coverage.js  test-wasm.js
src/: CMakeLists.txt  normalize_wrapper.cpp
src/cli/: CMakeLists.txt  main.cpp  options.cpp  options.h  version.h.in
src/core/: CMakeLists.txt  buffer_api.cpp  buffer_api.h  managed_buffer.h  ngram_cache.cpp  ngram_cache.h  normalize.cpp  normalize.h  pmi.cpp  pmi.h  progress_buffer.h  streaming_processor.cpp  streaming_processor.h  text_utils.cpp  text_utils.h  word_extraction.cpp  word_extraction.h
src/core/word_extraction/: CMakeLists.txt  common.h  filter.cpp  filter.h  generator.cpp  generator.h  memory_pool.h  ranker.cpp  ranker.h  trie.cpp  trie.h  verifier.cpp  verifier.h
src/io/: CMakeLists.txt  file_io.cpp  file_io.h
src/parallel/: CMakeLists.txt  executor.cpp  executor.h
src/wasm/: CMakeLists.txt  wasm_exports.cpp  wasm_main.cpp
tests/: CMakeLists.txt
tests/cli/: cli_integration_test.sh  options_test.cpp  word_extraction_test.sh
tests/core/: buffer_api_test.cpp  concurrency_safety_test.cpp  edge_case_test.cpp  memory_pool_test.cpp  memory_safety_test.cpp  ngram_optimization_test.cpp  normalize_detailed_error_test.cpp  normalize_error_test.cpp  normalize_parallel_test.cpp  normalize_test.cpp  normalize_unicode_test.cpp  performance_issues_test.cpp  performance_test.cpp  pmi_advanced_test.cpp  pmi_error_test.cpp  pmi_test.cpp  progress_callback_test.cpp  resource_leak_test.cpp  shared_memory_mock.cpp  shared_memory_mock.h  shared_memory_test.cpp  text_utils_test.cpp  word_extraction_filter_test.cpp  word_extraction_generator_advanced_test.cpp  word_extraction_generator_test.cpp  word_extraction_ranker_test.cpp  word_extraction_test.cpp  word_extraction_trie_test.cpp  word_extraction_verifier_test.cpp
tests/cpp/: main_test.cpp
tests/io/: file_io_test.cpp  stdin_stdout_test.cpp
tests/parallel/: executor_test.cpp
